@@ -45,6 +45,9 @@ changes in sbcl-1.0.5 relative to sbcl-1.0.4:
     specifier no longer causes infinite recursion.
   * bug fix: SB-EXT:MUFFLE-CONDITIONS declarations no longer trigger a 
     bogus warning in DEFMETHOD bodies (reported by Kevin Reid)
+  * bug fix: an &environment argument with the correct variable information
+    is passed to macros that are expanded during byte compilation
+    (reported by Samium Gromoff)
   * improvement: the x86-64/darwin port now passes all tests and
     should be considered non-experimental.
 
